Tomcatdeploy.yml
---
apiVersion: v1
kind: Pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  labels:
    app: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: tomcat
        image: kunal2411/tomcat.1:latest
        ports:
        - containerPort: 8080
       ...
       --- 
      apiVersion: v1
      kind: Service
      metadata:
        name: my-service
      spec:
        type: LoadBalancer
        selector:
          app: my-app
        ports:
          - protocol: TCP
            port: 8080
            targetPort: 8080
        ...
