homepage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment1
  labels:
    app: nginx1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      volumes:
        - name: my-pvc
          persistentVolumeClaim:
          claimName: my-pvc
      containers:
      - name: nginx
        image: kunal2411/homepage:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: my-pvc
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service1
spec:
  type: NodePort
  selector:
      app: nginx1
  ports:
    - port: 80
      targetPort: 80
...
