mobilepage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment2
  labels:
    app: nginx2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx
        image: kunal2411/mobile:latest
        ports:
        - containerPort: 80
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service2
spec:
  type: NodePort
  selector:
      app: nginx2
  ports:
    - port: 80
      targetPort: 80
...
