ingressrule.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a936a81e727574fad838b876bfd8116c-821840524.ap-south-1.elb.amazonaws.com
    http: # Correct indentation
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service1
            port:
              number: 80
      - path: /mobile/
        pathType: Prefix
        backend:
          service:
            name: my-service2
            port:
              number: 80
      - path: /desktop/
        pathType: Prefix
        backend:
          service:
            name: my-service3
            port:
              number: 80
...
